test/files/pos/t10350b/s.scala

package s

object Test extends App {
  println(new p.p.q.Bot().topper)
}
