test/files/neg/macro-invalidimpl-c/Test_2.scala
object Test extends App {
  new Macros().foo(42)
}